Gap fix attempt #3

--- a/public/css/index-styles.css
+++ b/public/css/index-styles.css
@@ -7,6 +7,7 @@
   gap: 0 !important;
   flex-direction: column; /* Changed to column to accommodate mobile button */
   background-color: #b3d6ff;
+  margin-bottom: 0 !important;
 }
 .content-container {
   gap: 0 !important;
@@ -20,6 +21,7 @@
   width: auto;
   max-width: 45rem;
   padding-bottom: 2rem;
+  margin-bottom: 0 !important;
 }
 .hero-content {
   display: flex;
@@ -66,6 +68,7 @@
 }
 .mobile-only {
   display: none;
+  margin-bottom: 0 !important;
 }
 /* Mobile Phone Image Style */
 .mobile {
@@ -878,6 +881,12 @@
   height: 100%;
   stroke: #46953f;
 }
+.dashboard-img .inner-content-container {
+  margin-bottom: 0 !important;
+}
+.dashboard-img .demo-page-img {
+  margin-bottom: 0 !important;
+}
 /* Handle screen readers and accessibility */
  @media (prefers-reduced-motion: reduce) {
   .slider-track,
@@ -1556,7 +1565,8 @@
   .inner-content-container {
     width: 95%;
     margin-top: 2rem;
-    margin-bottom: 1.9rem;
+    /* margin-bottom: 1.9rem; */
+    margin-bottom: 0 !important;
   }
   /* .dashboard-img {
     margin-bottom: -1px;
@@ -1566,7 +1576,7 @@
 /* Small Mobile (below 320px) */
 @media screen and (max-width: 319px) {
   .hero {
-    margin-bottom: -2px;
+    margin-bottom: -2px !important;
   }
   .hero-container {
     gap: 1rem !important;
